--- a/panel-admin.html
+++ b/panel-admin.html
@@ -1,86 +1,153 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Rekap & Setting</title>
-    <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: #f4f6f8;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            max-width: 600px;
-            margin: 40px auto;
-            background: #ffffff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-        }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Dashboard Setting rekap dan limit pengaturaan masuk</title>
+
+<style>
+    * {
+        box-sizing: border-box;
+        font-family: "Segoe UI", Arial, sans-serif;
+    }
+
+    body {
+        margin: 0;
+        min-height: 100vh;
+        background: linear-gradient(135deg, #1d2671, #c33764);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .dashboard {
+        width: 95%;
+        max-width: 900px;
+        background: rgba(255, 255, 255, 0.15);
+        backdrop-filter: blur(12px);
+        border-radius: 18px;
+        padding: 30px;
+        color: #fff;
+        box-shadow: 0 15px 40px rgba(0,0,0,0.3);
+    }
+
+    h1 {
+        text-align: center;
+        margin-bottom: 30px;
+        font-weight: 600;
+        letter-spacing: 1px;
+    }
+
+    .grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+        gap: 20px;
+    }
+
+    .card {
+        background: rgba(255,255,255,0.2);
+        border-radius: 15px;
+        padding: 25px 20px;
+        text-align: center;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        text-decoration: none;
+        color: #fff;
+        position: relative;
+        overflow: hidden;
+    }
+
+    .card::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(
+            120deg,
+            transparent,
+            rgba(255,255,255,0.3),
+            transparent
+        );
+        transition: 0.6s;
+    }
+
+    .card:hover::before {
+        left: 100%;
+    }
+
+    .card:hover {
+        transform: translateY(-8px) scale(1.02);
+        background: rgba(255,255,255,0.3);
+    }
+
+    .icon {
+        font-size: 42px;
+        margin-bottom: 15px;
+    }
+
+    .title {
+        font-size: 18px;
+        font-weight: 600;
+    }
+
+    .desc {
+        font-size: 13px;
+        opacity: 0.9;
+        margin-top: 6px;
+    }
+
+    footer {
+        text-align: center;
+        margin-top: 30px;
+        font-size: 12px;
+        opacity: 0.8;
+    }
+
+    @media (max-width: 480px) {
         h1 {
-            text-align: center;
-            color: #333;
-            margin-bottom: 25px;
+            font-size: 20px;
         }
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-        li {
-            margin-bottom: 15px;
-        }
-        a {
-            display: block;
-            text-decoration: none;
-            background: #2c7be5;
-            color: #ffffff;
-            padding: 12px 15px;
-            border-radius: 6px;
-            transition: background 0.3s;
-        }
-        a:hover {
-            background: #1a5dcc;
-        }
-        footer {
-            text-align: center;
-            margin-top: 20px;
-            font-size: 12px;
-            color: #777;
-        }
-    </style>
+    }
+</style>
 </head>
+
 <body>
 
-    <div class="container">
-        <h1>Menu Rekap & Setting</h1>
-        <ul>
-            <li>
-                <a href="https://docs.google.com/spreadsheets/d/1nseGPtn6cApBg6fWf2BBfsV3NQo-MONa_rY4-ZqfS6s/edit?gid=1664641699#gid=1664641699" target="_blank">
-                    Setting Lembur
-                </a>
-            </li>
-            <li>
-                <a href="https://docs.google.com/spreadsheets/d/1D6ltu1-qBy0f-rkUcFzHB8uc1j8zrgFRcFE75e4MlhI/edit?gid=0#gid=0" target="_blank">
-                    Rekap Closing
-                </a>
-            </li>
-            <li>
-                <a href="https://hong-ark.github.io/req-cuti/setting.html" target="_blank">
-                    Setting Limit Web
-                </a>
-            </li>
-            <li>
-                <a href="https://docs.google.com/spreadsheets/d/1FIlRZr5_GhR5n-1hd2xiP3uBOCqTxt7ulNX970u71XQ/edit?usp=sharing" target="_blank">
-                    Rekap Closing Tahunan
-                </a>
-            </li>
-        </ul>
-        <footer>
-            © 2025
-        </footer>
+<div class="dashboard">
+    <h1>Dashboard Rekap & Setting</h1>
+
+    <div class="grid">
+        <a class="card" href="https://docs.google.com/spreadsheets/d/1nseGPtn6cApBg6fWf2BBfsV3NQo-MONa_rY4-ZqfS6s/edit?gid=1664641699#gid=1664641699" target="_blank">
+            <div class="icon">⏱️</div>
+            <div class="title">Setting Lembur</div>
+            <div class="desc">Pengaturan data lembur karyawan</div>
+        </a>
+
+        <a class="card" href="https://docs.google.com/spreadsheets/d/1D6ltu1-qBy0f-rkUcFzHB8uc1j8zrgFRcFE75e4MlhI/edit?gid=0#gid=0" target="_blank">
+            <div class="icon">📊</div>
+            <div class="title">Rekap Closing</div>
+            <div class="desc">Rekap data closing harian</div>
+        </a>
+
+        <a class="card" href="https://hong-ark.github.io/req-cuti/setting.html" target="_blank">
+            <div class="icon">⚙️</div>
+            <div class="title">Setting Limit Web</div>
+            <div class="desc">Pengaturan limit sistem web</div>
+        </a>
+
+        <a class="card" href="https://docs.google.com/spreadsheets/d/1FIlRZr5_GhR5n-1hd2xiP3uBOCqTxt7ulNX970u71XQ/edit?usp=sharing" target="_blank">
+            <div class="icon">📅</div>
+            <div class="title">Rekap Closing Tahunan</div>
+            <div class="desc">Ringkasan closing per tahun</div>
+        </a>
     </div>
+
+    <footer>
+        © 2025 • Dashboard Internal
+    </footer>
+</div>
 
 </body>
 </html>
