--- a/panel-admin.html
+++ b/panel-admin.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Menu Rekap & Setting</title>
+<title>Panel admin Rekap & Setting Jadwal</title>
 
 <style>
     body {
@@ -96,9 +96,10 @@
     </div>
 
     <footer>
-        © 2025
+        
     </footer>
 </div>
 
 </body>
 </html>
+
