--- a/panel-admin.html
+++ b/panel-admin.html
@@ -3,18 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Panel admin Rekap & Setting Jadwal</title>
+<title>Panel Rekap & Setting Jadwal</title>
 
 <style>
     body {
         margin: 0;
-        background: #f5f7fa;
+        background: linear-gradient(180deg, #eef2f7, #e6ebf2);
         font-family: "Segoe UI", Arial, sans-serif;
-        color: #333;
+        color: #2f3440;
     }
 
     .container {
-        max-width: 800px;
+        max-width: 900px;
         margin: 60px auto;
         padding: 0 20px;
     }
@@ -22,42 +22,44 @@
     h1 {
         font-size: 22px;
         font-weight: 600;
-        margin-bottom: 30px;
-        color: #222;
+        margin-bottom: 28px;
+        color: #1f2937;
     }
 
     .list {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-        gap: 16px;
+        grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+        gap: 18px;
     }
 
     .item {
-        background: #fff;
-        border-radius: 8px;
+        background: #f9fbff;
+        border-radius: 10px;
         padding: 18px 20px;
         text-decoration: none;
         color: inherit;
-        border: 1px solid #e5e7eb;
+        border: 1px solid #e2e8f0;
         transition: all 0.2s ease;
     }
 
     .item:hover {
-        border-color: #3b82f6;
-        box-shadow: 0 6px 18px rgba(0,0,0,0.06);
+        background: #f1f6ff;
+        border-color: #93c5fd;
+        box-shadow: 0 8px 20px rgba(0,0,0,0.06);
         transform: translateY(-2px);
     }
 
     .title {
         font-size: 15px;
         font-weight: 600;
-        margin-bottom: 4px;
         color: #111827;
+        margin-bottom: 6px;
     }
 
     .desc {
         font-size: 13px;
         color: #6b7280;
+        line-height: 1.4;
     }
 
     footer {
@@ -71,7 +73,7 @@
 <body>
 
 <div class="container">
-    <h1>Menu Rekap & Setting</h1>
+    <h1>Panel Rekap & Setting Jadwal</h1>
 
     <div class="list">
         <a class="item" href="https://docs.google.com/spreadsheets/d/1nseGPtn6cApBg6fWf2BBfsV3NQo-MONa_rY4-ZqfS6s/edit?gid=1664641699#gid=1664641699" target="_blank">
@@ -86,12 +88,17 @@
 
         <a class="item" href="https://hong-ark.github.io/req-cuti/setting.html" target="_blank">
             <div class="title">Setting Limit Web</div>
-            <div class="desc">Pengaturan limit sistem</div>
+            <div class="desc">Pengaturan limit sistem request</div>
         </a>
 
         <a class="item" href="https://docs.google.com/spreadsheets/d/1FIlRZr5_GhR5n-1hd2xiP3uBOCqTxt7ulNX970u71XQ/edit?usp=sharing" target="_blank">
             <div class="title">Rekap Closing Tahunan</div>
-            <div class="desc">Ringkasan closing tahunan</div>
+            <div class="desc">Ringkasan data closing per tahun</div>
+        </a>
+
+        <a class="item" href="https://drive.google.com/drive/folders/1j9oa0W3O6zHk-bmGYhujYcQIckxa-PLM?hl=id" target="_blank">
+            <div class="title">Folder Jadwal</div>
+            <div class="desc">Dokumen & file jadwal kerja</div>
         </a>
     </div>
 
@@ -102,4 +109,3 @@
 
 </body>
 </html>
-
