--- a/panel-admin.html
+++ b/panel-admin.html
@@ -100,6 +100,10 @@
             <div class="title">Folder Jadwal</div>
             <div class="desc">Dokumen & file jadwal kerja</div>
         </a>
+        <a class="item" href="https://drive.google.com/drive/folders/1vz65CwRQf7jyOj0FleviAWtMvW_99HV_?usp=sharing" target="_blank">
+            <div class="title">Folder REQ</div>
+            <div class="desc">Document Req Jadwal</div>
+        </a>
     </div>
 
     <footer>
@@ -109,3 +113,4 @@
 
 </body>
 </html>
+
