--- a/panel-admin.html
+++ b/panel-admin.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Panel Rekap & Setting Jadwal</title>
+<title>Menu Rekap & Setting</title>
 
 <style>
     body {
@@ -19,11 +19,23 @@
         padding: 0 20px;
     }
 
-    h1 {
-        font-size: 22px;
+    /* ===== HEADER ===== */
+    .header {
+        text-align: center;
+        margin-bottom: 36px;
+    }
+
+    .header h1 {
+        font-size: 24px;
         font-weight: 600;
-        margin-bottom: 28px;
+        margin: 0;
         color: #1f2937;
+    }
+
+    .header p {
+        margin-top: 6px;
+        font-size: 13px;
+        color: #6b7280;
     }
 
     .list {
@@ -66,6 +78,7 @@
         margin-top: 40px;
         font-size: 12px;
         color: #9ca3af;
+        text-align: center;
     }
 </style>
 </head>
@@ -73,7 +86,12 @@
 <body>
 
 <div class="container">
-    <h1>Panel Rekap & Setting Jadwal</h1>
+
+    <!-- HEADER CENTER -->
+    <div class="header">
+        <h1>Menu Rekap & Setting</h1>
+        <p>Dashboard internal untuk akses data & pengaturan</p>
+    </div>
 
     <div class="list">
         <a class="item" href="https://docs.google.com/spreadsheets/d/1nseGPtn6cApBg6fWf2BBfsV3NQo-MONa_rY4-ZqfS6s/edit?gid=1664641699#gid=1664641699" target="_blank">
@@ -100,17 +118,17 @@
             <div class="title">Folder Jadwal</div>
             <div class="desc">Dokumen & file jadwal kerja</div>
         </a>
-        <a class="item" href="https://drive.google.com/drive/folders/1vz65CwRQf7jyOj0FleviAWtMvW_99HV_?usp=sharing" target="_blank">
+           <a class="item" href="https://drive.google.com/drive/folders/1vz65CwRQf7jyOj0FleviAWtMvW_99HV_?usp=sharing" target="_blank">
             <div class="title">Folder REQ</div>
             <div class="desc">Document Req Jadwal</div>
         </a>
     </div>
 
     <footer>
-        
+        © 2025
     </footer>
+
 </div>
 
 </body>
 </html>
-
